--- a/src/style/components/_project.scss
+++ b/src/style/components/_project.scss
@@ -1,6 +1,60 @@
+// Row Hack for grid gap
+.row--projects {
+  grid-gap: 2px;
+}
+
 .project {
   &__tags {
     display: flex;
     grid-gap: 20px;
+  }
+
+
+  // Project overview
+  &__wrapper {
+    .project {
+      &__link {
+        display: block;
+        border: 1px solid $color-white;
+        position: relative;
+        padding-bottom: 56.25%;
+        overflow: hidden;
+
+        &:hover {
+          .project__overlay {
+            background-color: rgba(255, 255, 255, .25);
+            opacity: 1;
+          }
+        }
+
+        img {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+      }
+
+      &__overlay {
+        @extend .text__title;
+        color: $color-black;
+        background-color: rgba(255, 255, 255, .25);
+        opacity: 1;
+
+        // background-color: transparent;
+        // opacity: 0;
+        transition: all 125ms ease;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-flow: column;
+        justify-content: flex-end;
+      }
+    }
   }
 }
