--- a/src/style/components/_project.scss
+++ b/src/style/components/_project.scss
@@ -1,14 +1,27 @@
-// Row Hack for grid gap
-.row--projects {
-  grid-gap: 2px;
-}
-
 .project {
   &__tags {
     display: flex;
     grid-gap: 20px;
   }
 
+  &__row {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 10px;
+
+    @include respond-to(small) {
+      grid-template-columns: 1fr 1fr;
+    }
+
+    @include respond-to(medium) {
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-gap: 20px;
+    }
+
+    @include respond-to(huge) {
+      grid-gap: 40px;
+    }
+  }
 
   // Project overview
   &__wrapper {
@@ -42,18 +55,16 @@
         color: $color-black;
         background-color: rgba(255, 255, 255, .25);
         opacity: 1;
-
-        // background-color: transparent;
-        // opacity: 0;
         transition: all 125ms ease;
         position: absolute;
         top: 0;
         left: 0;
-        width: 100%;
-        height: 100%;
+        bottom: 0;
+        right: 0;
         display: flex;
         flex-flow: column;
         justify-content: flex-end;
+        padding: 10px;
       }
     }
   }
