--- a/frontend/src/style/base/text.scss
+++ b/frontend/src/style/base/text.scss
@@ -1,10 +1,12 @@
 .text {
   &__title {
+    @include responsive-font(3vw, 24px, 36px, 30px);
     font-family: $font-base;
     font-weight: 600;
   }
 
   &__paragraph {
+    @include responsive-font(1.8vw, 16px, 22px, 18px);
     font-family: $font-base;
     font-weight: 300;
   }
