Added aos.js to frontend

--- a/frontend/src/style/app.scss
+++ b/frontend/src/style/app.scss
@@ -7,5 +7,8 @@
 // Layout
 @import "layout/body", "layout/footer", "layout/placeholder";
 
+// Vendors
+@import "aos/dist/aos.css";
+
 // Components
 @import "components/project";
