--- a/frontend/src/style/layout/footer.scss
+++ b/frontend/src/style/layout/footer.scss
@@ -1,4 +1,27 @@
 .footer {
   width: 100%;
   margin-top: auto;
+  background-color: $color-white;
+  position: relative;
+  padding: 30px 0;
+
+  @include respond-to(small) {
+    padding: 60px 0;
+  }
+
+  &__background {
+    content: '';
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: $color-white;
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+
+    div:nth-child(2) {
+      background-color: $color-black;
+    }
+  }
 }
